<resources>
    <string name="app_name">강북제일침례교회</string>
    <string name="phone">041-852-8236</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">888132771314722</string>
    <string name="sign_up">Sign Up</string>
    <string name="nav_home">강북제일침례교회</string>
    <string name="nav_home_eng">HOME</string>
    <string name="nav_file">자료실</string>
    <string name="nav_youtube">Youtube</string>
    <string name="nav_week">주보</string>
    <string name="nav_week_mid">주일낮예배</string>
    <string name="nav_week_afternoon">주일오후예배</string>
    <string name="nav_week_wed">수요예배</string>
    <string name="nav_week_service">예배봉사위원</string>
    <string name="nav_week_group">금주의목장예배</string>
    <string name="nav_week_study">목장성경공부</string>
    <string name="nav_week_daily">금주영혼의양식</string>
    <string name="nav_week_notice">교회소식</string>
    <string name="nav_bible">성경</string>
    <string name="nav_column">목회칼럼</string>
    <string name="nav_calendar">교회일정</string>
    <string name="nav_picture">교회사진첩</string>
    <string name="nav_schedule">예배/교육안내</string>
    <string name="nav_place">교회약도</string>
    <!--Auth-->
    <string name="inputname">이름을 입력하세요</string>
    <string name="auth_creat_failed">등록된 계정이거나 이메일 혹은 비밀번호 형식이 잘못되었습니다</string>
    <string name="auth_sigin_failed">인증 실패</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">로그인</string>
    <string name="create_account">새 계정 등록</string>
    <string name="invite">친구초대</string>
    <string name="sign_out">로그아웃</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">이메일</string>
    <string name="hint_name">이름</string>
    <string name="hint_password">비밀번호</string>
    <string name="google_title_text">Google 계정</string>
    <string name="facebook_title_text">Facebook 계정</string>
    <string name="emailpassword_title_text">이메일</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="anonymous_title_text">익명</string>
    <string name="remove">삭제</string>

    <string name="invitation_message">강북제일침례교회 앱으로 초대합니다!</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">강북제일침례교회 초대</string>
    <string name="network_error">네트워크 상태를 확인하세요.\n일부 기능이 실행되지 않을 수 있습니다.</string>
    <string name="backpress">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="user_info_no_name">Unknown user</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="post_upload_progress_message">Uploading...</string>
    <string name="error_user_not_signed_in">로그인이 필요합니다</string>
    <string name="error_upload_task_create">업로드 할 수 없습니다</string>
    <string name="start">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="todaybible">오늘의 말씀</string>
    <string name="mp3Info"><a href="https://support.google.com/youtube/answer/1696878?topic=2888648&amp;#x26;%38hl=ko">MP3 변환 방법 보러가기</a></string>
    <string name="update_title">업데이트 안내</string>
    <string name="update_content">업데이트 내역</string>
    <string name="update_notice">업데이트 버전이 있습니다.\n마켓으로 이동합니다.</string>
    <string name="btDialCancel">취소</string>
    <string name="btDialSetting">확인</string>
</resources>
